--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,57 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "UABinYourPocket";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    @*<title>@ViewData["Title"] - UABinYourPocket</title>*@
+    @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/UABinYourPocket.styles.css" asp-append-version="true" />
+</head>
+
+
+
+<div class="landing-page">
+    <header>
+        <div class="container">
+
+            <a> While(<b>True</b>) Cry();</a>
+            <ul class="links">
+                <li><a asp-controller="Home" asp-action="Index">Inicio</a></li>
+                <li><a asp-controller="UnidadesCurriculares" asp-action="UnidadesCurriculares">Unidades Curriculares</a></li>
+                <li> <a asp-controller="Calendario" asp-action="Calendario">Calendário</a></li>
+                <li>Sobre</li>
+            </ul>
+
+        </div>
+    </header>
+    <div class="content">
+        <div class="container">
+            <div class="info">
+                <h1><b>UAB</b>inYourPocket</h1>
+                <br />
+                <p>
+                    Site de gestão pessoal de calendário e notas é uma plataforma online que ajuda as pessoas a organizarem suas tarefas,
+                    compromissos e anotações de forma simples e eficiente.
+                </p>
+                <br />
+                <button onclick="location.href='@Url.Action("Login", "Login")'">Login</button>
+
+            </div>
+            <div class="image">
+                <img src="https://cdn.shopify.com/s/files/1/0093/6227/6415/files/02_Fashion-People-Vector-For-Free_1024x1024.png?v=1594027600">
+            </div>
+        </div>
+    </div>
 </div>
+
+<footer class="border-top footer text-muted">
+    <div class="container">
+        <div class="text-center">
+
+            &copy; 2023 - UABinYourPocket - While(True) Cry();
+        </div>
+    </div>
+</footer>
