--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-html {
+﻿/*html {
   font-size: 14px;
 }
 
@@ -6,6 +6,10 @@ html {
   html {
     font-size: 16px;
   }
+}
+
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
@@ -16,3 +20,262 @@ html {
 body {
   margin-bottom: 60px;
 }
+*/
+
+/* Start Global Rules */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+button {
+    border: 0;
+    border-radius: 20px;
+    padding: 5px 30px;
+    margin-left:10px;
+    margin-top: 0px;
+    cursor: pointer;
+    color: #FFF;
+    background-color: #00b4d8;
+}
+
+
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+/* Small */
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+/* Medium */
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+/* Large */
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
+/* End Global Rules */
+
+/* Start Landing Page */
+.landing-page header {
+    min-height: 80px;
+    display: flex;
+}
+
+@media (max-width: 767px) {
+    .landing-page header {
+        min-height: auto;
+        display: initial;
+    }
+}
+
+.landing-page header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media (max-width: 767px) {
+    .landing-page header .container {
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+.landing-page header .logo {
+    color: #5d5d5d;
+    font-style: italic;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+@media (max-width: 767px) {
+    .landing-page header .logo {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+.landing-page header .links {
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 767px) {
+    .landing-page header .links {
+        text-align: center;
+        gap: 10px;
+    }
+}
+
+.landing-page header .links li {
+    margin-left: 30px;
+    color: #5d5d5d;
+    cursor: pointer;
+    transition: .3s;
+}
+
+@media (max-width: 767px) {
+    .landing-page header .links li {
+        margin-left: auto;
+    }
+}
+
+.landing-page header .links li:last-child {
+    border-radius: 20px;
+    padding: 10px 20px;
+    color: #FFF;
+    background-color: #00b4d8;
+}
+
+.landing-page header .links li:not(:last-child):hover {
+    color: #00b4d8;
+}
+
+.landing-page .content .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 140px;
+    min-height: calc(100vh - 80px);
+}
+
+@media (max-width: 767px) {
+    .landing-page .content .container {
+        gap: 0;
+        min-height: calc(100vh - 101px);
+        justify-content: center;
+        flex-direction: column-reverse;
+    }
+}
+
+@media (max-width: 767px) {
+    .landing-page .content .info {
+        text-align: center;
+        margin-bottom: 15px
+    }
+}
+
+.landing-page .content .info h1 {
+    color: #5d5d5d;
+    font-size: 44px;
+}
+
+.landing-page .content .info p {
+    margin: 0;
+    line-height: 1.6;
+    font-size: 15px;
+    color: #5d5d5d;
+}
+
+.landing-page .content .info button {
+    border: 0;
+    border-radius: 20px;
+    padding: 12px 30px;
+    margin-top: 30px;
+    cursor: pointer;
+    color: #FFF;
+    background-color: #00b4d8;
+}
+
+.landing-page .content .image img {
+    max-width: 100%;
+}
+/* End Landing Page */
+
+
+
+/* Start TIMELINE Page */
+.timeline {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+    /* the timeline's center vertical line */
+    .timeline:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        width: 1px;
+        background-color: #ccc;
+    }
+
+    .timeline li {
+        border-top: 1px solid #ccc;
+        position: relative;
+        width: 50%;
+        min-height: 100px;
+        margin-bottom: 20px;
+        padding: 20px 40px;
+        text-align: right;
+        transition: .3s;
+        opacity: 0;
+        transform: translateX(-10%);
+    }
+        /* the rounded mark on each timeline item */
+        .timeline li:before {
+            content: "";
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            background: #ccc;
+            border-radius: 50%;
+            box-sizing: border-box;
+            transform: translate(50%,-50%);
+        }
+
+    .timeline h3 {
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+
+    .timeline p {
+        font-size: 20px;
+        line-height: 28px;
+    }
+
+    .timeline li:nth-child(2n) {
+        align-self: flex-end;
+        text-align: left;
+        transform: translateX(10%);
+    }
+
+        .timeline li:nth-child(2n):before {
+            left: 0;
+            transform: translate(-50%,-50%);
+        }
+
+    .timeline li.visible {
+        opacity: 1;
+        transform: translateX(0);
+    }
