--- a/Views/UnidadesCurriculares/UnidadesCurriculares.cshtml
+++ b/Views/UnidadesCurriculares/UnidadesCurriculares.cshtml
@@ -55,7 +55,22 @@
     <div class="content">
         @*<div class="container">*@
 
-        <h2>Unidades Curriculares</h2>
+
+        <table class="table">
+            <tr>
+                <th scope="col"><h2>Unidades Curriculares</h2></th>
+                <th scope="col">
+                    <a role="button">
+                        Exportar PDF
+                        <img src="~/images/pdfblue.png" width="30" />
+                    </a>
+                </th>
+
+            </tr>
+        </table>
+       
+        
+        
         <table class="table">
             <thead>
                 <tr>
@@ -112,8 +127,8 @@
 
 
                 @************************************************************************************@
+
                 
-           
                 <tr>
                     <th scope="row">1.º Semestre</th>
                     <td>1.º Ano</td>
