--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -31,7 +31,8 @@
                     }
                     else
                     {
-                        <button onclick="location.href='@Url.Action("Login", "Login")'">Login</button>
+                        <a role="button" asp-controller="Login" asp-action="Login">Login</a>
+                        
                     
                     }
                 </li>
