--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -47,6 +47,7 @@
                 </div>
 
             }
+            <a class="Button" asp-controller="UnidadesCurriculares" asp-action="UnidadesCurriculares" role="button">Entrar</a>
             <button onclick="location.href='@Url.Action("UnidadesCurriculares", "UnidadesCurriculares")'">Entrar</button>
             <br />
             <a class="Button" asp-controller="Home" asp-action="Index" role="button">Voltar</a>
