update pdfprint button

--- a/Views/UnidadesCurriculares/UnidadesCurriculares.cshtml
+++ b/Views/UnidadesCurriculares/UnidadesCurriculares.cshtml
@@ -59,7 +59,7 @@
         <h2>Unidades Curriculares</h2>
 
         <div style="display: flex; justify-content:flex-end">
-            <a role="button1" asp-route-id="" asp-controller="UnidadesCurriculares" asp-action="Editar"><img src="~/images/pdfblue.png" width="30" /></a>
+            <a role="button1" asp-route-id="" asp-controller="PDF" asp-action="GerarPdfComNotas"><img src="~/images/pdfblue.png" width="30" /></a>
         </div>
 
 
@@ -101,10 +101,6 @@
                                 </div>
                             </td>
                         </tr>
-
-
-
-
 
                     }    
 
