--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,12 +37,12 @@
                     }
                 </li>
 
-                @*@if (TempData["User"] != null)
+                @if (TempData["User"] != null)
                 {
-                        <li>
+                     <li>
                         <button onclick="@TempData.Remove("User")">Logout</button>
-                    </li>
-                        }*@
+                     </li>
+                  }
 
                 
 
