--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -46,13 +46,13 @@
                 </div>
 
             }
-            <a class="Button" asp-controller="UnidadesCurriculares" asp-action="UnidadesCurriculares" role="button">Entrar</a>
+           @* <a class="Button" asp-controller="UnidadesCurriculares" asp-action="UnidadesCurriculares" role="button">Entrar</a>*@
             <button onclick="location.href='@Url.Action("UnidadesCurriculares", "UnidadesCurriculares")'">Entrar</button>
             <br />
             <a class="Button" asp-controller="Home" asp-action="Index" role="button">Voltar</a>
         </form>
 
-
+       
     </div>
     <div class="overlay-container">
         <div class="overlay">
