--- a/Views/UnidadesCurriculares/Editar.cshtml
+++ b/Views/UnidadesCurriculares/Editar.cshtml
@@ -31,19 +31,18 @@
                     }
                     else
                     {
-                        <button onclick="location.href='@Url.Action("Login", "Login")'">Login</button>
+                        <a role="button" asp-controller="Login" asp-action="Login">Login</a>
+
 
                     }
                 </li>
 
-               @* @if (TempData["User"] != null)
+             @*   @if (TempData["User"] != null)
                 {
                     <li>
                         <button onclick="@TempData.Remove("User")">Logout</button>
                     </li>
-                }
-*@
-
+                }*@
 
             </ul>
 
