--- a/Views/UnidadesCurriculares/UnidadesCurriculares.cshtml
+++ b/Views/UnidadesCurriculares/UnidadesCurriculares.cshtml
@@ -1,7 +1,9 @@
-﻿@{
+﻿@using System.Collections.ObjectModel
+
+@{
     ViewData["Title"] = "UABinYourPocket";
 }
-@model List<UCModel>
+@model ObservableCollection<UCModel>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,24 +27,24 @@
                 <li>
                     @if (TempData["User"] != null)
                     {
-                        @TempData["User"]
+                       @TempData["User"]
                         TempData.Keep("User");
                     }
                     else
                     {
                         <a role="button" asp-controller="Login" asp-action="Login">Login</a>
 
+
                     }
                 </li>
 
-              @*  @if (TempData["User"] != null)
+                @*@if (TempData["User"] != null)
                 {
                     <li>
                         <button onclick="@TempData.Remove("User")">Logout</button>
                     </li>
-                }*@
-
-
+                }
+*@
 
             </ul>
 
@@ -59,8 +61,9 @@
         <h2>Unidades Curriculares</h2>
 
         <div style="display: flex; justify-content:flex-end">
-            <a role="button1" asp-route-id="" asp-controller="PDF" asp-action="GerarPdfComNotas"><img src="~/images/pdfblue.png" width="30" /></a>
+            <a role="button1" asp-controller="UnidadesCurriculares" asp-action="GerarPDF"><img src="~/images/pdfblue.png" width="30" /></a>
         </div>
+       
 
 
         <table class="table">
@@ -78,7 +81,7 @@
             </thead>
             <tbody>
 
-                @if (Model != null && Model.Any())
+                @if (Model != null && Model.Count() > 0 )
                 {
                     foreach (UCModel uc in Model)
                     {
@@ -95,7 +98,7 @@
                                    
                                     @* Verificar se está inscrito se sim edita senao pode inscrever na UC*@
                                     <a role="button" class="btn btn-primary" asp-route-id="@uc.ID" asp-controller="UnidadesCurriculares" asp-action="Editar">Editar</a>
-
+                                    <br>
                                     <a role="button" class="btn btn-primary" asp-route-id="@uc.ID" asp-controller="UnidadesCurriculares" asp-action="Inscrever">Inscrever</a>
                                    
                                 </div>
@@ -112,90 +115,6 @@
                         </tr>
                 
                 }
-
-
-                @************************************************************************************@
-
-                
-                <tr>
-                    <th scope="row">1.º Semestre</th>
-                    <td>1.º Ano</td>
-                    <td>21002</td>
-                    <td>Álgebra Linear</td>
-                    <td>6,00</td>
-                    <td>Aprovado</td>
-                    <td>
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            <a role="button" class="button" asp-controller="UnidadesCurriculares" asp-action="Editar">Editar</a> @*asp-route-id="@uc.ID"*@
-                          @*  <button onclick="location.href='@Url.Action("Editar", "UnidadesCurriculares")'">Editar</button>*@
-                         </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <th scope="row">1.º Semestre</th>
-                    <td>1.º Ano</td>
-                    <td>21002</td>
-                    <td>Álgebra Linear</td>
-                    <td>6,00</td>
-                    <td>Por Iniciar</td>
-                    <td>
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            <a role="button" class="button" asp-controller="UnidadesCurriculares" asp-action="Inscrever">Inscrever</a> @*asp-route-id="@uc.ID"*@
-@*                             <button onclick="location.href='@Url.Action("Inscrever", "UnidadesCurriculares")'">Inscrever</button>
-*@                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <th scope="row">1.º Semestre</th>
-                    <td>1.º Ano</td>
-                    <td>21002</td>
-                    <td>Álgebra Linear</td>
-                    <td>6,00</td>
-                    <td>Aprovado</td>
-                    <td>
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            <a role="button" class="button" asp-controller="UnidadesCurriculares" asp-action="Editar">Editar</a> @*asp-route-id="@uc.ID"*@
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <th scope="row">1.º Semestre</th>
-                    <td>1.º Ano</td>
-                    <td>21002</td>
-                    <td>Álgebra Linear</td>
-                    <td>6,00</td>
-                    <td>Aprovado</td>
-                    <td>
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            <a role="button" class="button" asp-controller="UnidadesCurriculares" asp-action="Editar">Editar</a> @*asp-route-id="@uc.ID"*@
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <th scope="row">1.º Semestre</th>
-                    <td>1.º Ano</td>
-                    <td>21002</td>
-                    <td>Álgebra Linear</td>
-                    <td>6,00</td>
-                    <td>Aprovado</td>
-                    <td>
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            <a role="button" class="button" asp-controller="UnidadesCurriculares" asp-action="Editar">Editar</a> @*asp-route-id="@uc.ID"*@
-                        </div>
-                    </td>
-                </tr>
-
-
-
-
-
-                @************************************************************************************@
-
-
 
 
 
